--- a/loginadmin.html
+++ b/loginadmin.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>Login as Supervisor</h2>
+    <h2>Login as Admin</h2>
     <form id="loginForm">
       <label for="email">Enter Your Email:</label>
       <input type="email" id="email" required>
@@ -32,13 +32,13 @@
       const verificationCode = Math.floor(100000 + Math.random() * 900000); 
 
       emailjs.send("YOUR_SERVICE_ID", "YOUR_TEMPLATE_ID", {
-        to_email: "jamesoraio@gmail.com",   
+        to_email: "orariojames2@gmail.com",   
         user_email: userEmail,              
         verification_code: verificationCode
       })
       .then(function(response) {
         document.getElementById("message").innerHTML = 
-          `<p style="color:green;">Verification code sent to <b>jamesoraio@gmail.com</b></p>`;
+          `<p style="color:green;">Verification code sent to <b>orariojames2@gmail.com</b></p>`;
         console.log("SUCCESS!", response.status, response.text);
       }, function(error) {
         document.getElementById("message").innerHTML = 
