--- a/loginadmin.html
+++ b/loginadmin.html
@@ -8,84 +8,36 @@
 
   <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
   <script type="text/javascript">
-    (function() {
-      emailjs.init("2II4AMPOttKnz7x9J");
+    (function(){
+      emailjs.init("2II4AMPOttKnz7x9J"); 
     })();
   </script>
 </head>
-   <h1 style="text-align:center; margin-bottom:10px; font-size:40px; color:#333;">
-      MARKET AND TRADE MONITORING SYSTEM
-    </h1>
-<body>
-  <div class="container" style="max-width:400px; margin:60px auto; padding:20px; border:1px solid #ddd; border-radius:8px; background:#fff;">
 
-    <h2 style="text-align:center; margin-bottom:20px;">Login as Admin</h2>
+<body>
+  <h1>MARKET AND TRADE MONITORING SYSTEM</h1>
+
+  <div class="container">
+    <h2>Login as Admin</h2>
 
     <form id="loginForm">
       <label>Email:</label>
-      <input type="email" id="email" required placeholder="Enter your email" style="width:100%;padding:10px;margin:8px 0;">
+      <input type="email" id="email" required placeholder="Enter your email">
 
       <label>Password:</label>
-      <input type="password" id="password" required placeholder="Enter your password" style="width:100%;padding:10px;margin:8px 0;">
+      <input type="password" id="password" required placeholder="Enter your password">
 
-       <button type="button" id="sendCodeBtn" style="width:100%;padding:10px;background:#4285f4;color:#fff;border:none;border-radius:5px;margin:8px 0;cursor:pointer;">
-        Send Code
-      </button>
-      
+      <button type="button" id="sendCodeBtn">Send Code</button>
+
       <label>Verification Code:</label>
-      <input type="text" id="codeInput" placeholder="Enter code" style="width:100%;padding:10px;margin:8px 0;">
+      <input type="text" id="codeInput" placeholder="Enter code">
 
-      <button type="submit" style="width:100%;padding:10px;background:green;color:#fff;border:none;border-radius:5px;margin:8px 0;cursor:pointer;">
-        Login
-      </button>
+      <button type="submit">Login</button>
     </form>
 
-    <div id="message" style="text-align:center; margin-top:10px;"></div>
+    <div id="message"></div>
   </div>
 
-  <script>
-    let sentCode = null;
-
-    document.getElementById("sendCodeBtn").addEventListener("click", function() {
-      const userEmail = document.getElementById("email").value;
-      if (!userEmail) {
-        alert("Please enter your email first.");
-        return;
-      }
-
-      sentCode = Math.floor(100000 + Math.random() * 900000); // 6-digit code
-
-      emailjs.send("service_qvm338i", "template_koj1ggb", {
-        to_email: "orariojames2@gmail.com", 
-        user_email: userEmail,
-        verification_code: sentCode
-      })
-      .then(function(response) {
-        document.getElementById("message").innerHTML =
-          `<p style="color:green;">Verification code sent to admin Gmail ✅</p>`;
-        console.log("SUCCESS!", response.status, response.text);
-      }, function(error) {
-        document.getElementById("message").innerHTML =
-          `<p style="color:red;">Error sending email ❌</p>`;
-        console.error("FAILED...", error);
-      });
-    });
-
-    document.getElementById("loginForm").addEventListener("submit", function(event) {
-      event.preventDefault();
-
-      const password = document.getElementById("password").value;
-      const codeInput = document.getElementById("codeInput").value;
-
-      const correctPassword = "orariojames"; 
-
-      if (password === correctPassword && codeInput == sentCode) {
-        window.location.href = "dash.html"; 
-      } else {
-        document.getElementById("message").innerHTML =
-          `<p style="color:red;">Invalid password or verification code ❌</p>`;
-      }
-    });
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
