--- a/loginadmin.html
+++ b/loginadmin.html
@@ -4,7 +4,51 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>MARKET AND TRADE MONITORING SYSTEM</title>
-  <link rel="stylesheet" href="style.css">
+  
+<style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f2f2f2;
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      max-width: 400px;
+      margin: 60px auto;
+      padding: 20px;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      background: #fff;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+    h1, h2 {
+      text-align: center;
+      color: #333;
+    }
+    input, button {
+      width: 100%;
+      padding: 10px;
+      margin: 8px 0;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+    }
+    button {
+      cursor: pointer;
+      border: none;
+      color: #fff;
+    }
+    #sendCodeBtn {
+      background: #4285f4;
+    }
+    #loginForm button[type="submit"] {
+      background: green;
+    }
+    #message {
+      text-align: center;
+      margin-top: 10px;
+    }
+  </style>
 
   <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
   <script type="text/javascript">
