--- a/loginadmin.html
+++ b/loginadmin.html
@@ -59,6 +59,7 @@
 </head>
 
 <body>
+  
   <h1>MARKET AND TRADE MONITORING SYSTEM</h1>
 
   <div class="container">
@@ -82,6 +83,6 @@
     <div id="message"></div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="loginjs.js"></script>
 </body>
 </html>
