--- a/loginadmin.html
+++ b/loginadmin.html
@@ -83,6 +83,6 @@
     <div id="message"></div>
   </div>
 
-  <script src="loginjs.js"></script>
+  <script src="loginadmin.js"></script>
 </body>
 </html>
