--- a/loginadmin.html
+++ b/loginadmin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>MARKET AND TRADE MONITORING SYSTEM</title>
+  <title>ADMIN</title>
   
 <style>
     body {
@@ -53,7 +53,7 @@
   <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
   <script type="text/javascript">
     (function(){
-      emailjs.init("2II4AMPOttKnz7x9J"); 
+      emailjs.init("ITbHFP1WBTFPISemM"); 
     })();
   </script>
 </head>
