--- a/loginadmin.html
+++ b/loginadmin.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>ADMIN - OTP Login</title>
+<title>ADMIN</title>
 
 <style>
   body {
