--- a/loginadmin.html
+++ b/loginadmin.html
@@ -26,7 +26,7 @@
 
     <form id="loginForm">
       <label for="email">Email:</label>
-      <input type="email" id="email" required value="orariojames2@gmail.com">
+      <input type="email" id="email" required value="enter your email">
 
       <label for="password">Password:</label>
       <input type="password" id="password" required placeholder="Enter your password">
