--- a/loginadmin.html
+++ b/loginadmin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>OTP Login - GitHub Pages</title>
+  <title>ADMIN</title>
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
   <style>
     body { font-family: Arial; background: #f2f2f2; margin: 0; padding: 0; }
